# mav_interface_msgs

./: .editorconfig  CMakeLists.txt  README.md  package.xml
.reuse/: dep5
include/mav_interface_msgs/: conversions.h  conversions_impl.hpp
msg/: AutopilotStatus.msg  FullStateStamped.msg  FullStateTrajectory.msg  OdomAndTrajectory.msg  Path.msg  StateStamped.msg  Trajectory.msg  Waypoint.msg
src/: conversions.cpp
srv/: AutopilotStatusService.srv
