<?xml version="1.0"?>
<package format="2">
  <name>mav_interface_msgs</name>
  <version>1.0.0</version>
  <description>Messages for interfacing with SRL MAV controllers</description>
  <author>Dimos Tzoumanikas</author>
  <maintainer email="dt214@ic.ac.uk">Dimos Tzoumanikas</maintainer>
  <license>BSD-3-Clause</license>

  <!-- ROS msgs related dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
