<?xml version="1.0"?>
<package format="2">
  <name>mav_interface_msgs</name>
  <version>1.0.0</version>
  <description>Messages for interfacing with SRL MAV controllers</description>
  <author>Dimos Tzoumanikas</author>
  <maintainer email="info@srl.in.tum.de">Smart Robotics Lab</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
<!-- ROS doesn't like comments at the beginning of package.xml. -->
<!-- SPDX-FileCopyrightText: 2020-2024 Smart Robotics Lab, Imperial College London, Technical University of Munich -->
<!-- SPDX-License-Identifier: CC0-1.0 -->
