<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_interface_msgs</name>
  <version>2.0.0</version>
  <description>Messages for interfacing with SRL MAV controllers</description>
  <author>Sebastián Barbas Laina</author>
  <maintainer email="sebastian.barbas@tum.de">Sebastián Barbas Laina</maintainer>
  <license>BSD-3-Clause</license>

  <!-- ROS msgs related dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- ROS doesn't like comments at the beginning of package.xml. -->
<!-- SPDX-FileCopyrightText: 2020-2024 Smart Robotics Lab, Imperial College London, Technical University of Munich -->
<!-- SPDX-License-Identifier: CC0-1.0 -->
